Ex b1 fixed